org units and uid lists